SERVER-105873 Ensure lifetime of catalog-owned pointers stored in QueryPlannerParams (#40502)

GitOrigin-RevId: 44a79782183315f8a4a3719ee94e0dd12a207106