src/mongo/db/query/compiler/optimizer/index_bounds_builder/index_bounds_builder_test_fixture.h
@@ -145,6 +145,7 @@ public:
                 {},
                 nullptr,
                 nullptr,
+                nullptr,
                 wildcardPos};
     }
 
