src/mongo/db/query/query_planner_params.cpp
@@ -52,6 +52,8 @@
 
 namespace mongo {
 
+MONGO_FAIL_POINT_DEFINE(pauseAfterFillingOutIndexEntries);
+
 namespace {
 /**
  * Converts the catalog metadata for an index into an IndexEntry, which is a format that is meant to
@@ -140,7 +142,8 @@ IndexEntry indexEntryFromIndexCatalogEntry(OperationContext* opCtx,
             ice.getFilterExpression(),
             desc->infoObj(),
             ice.getCollator(),
-            wildcardProjection};
+            wildcardProjection,
+            ice.shared_from_this()};
 }
 
 void fillOutIndexEntries(OperationContext* opCtx,
@@ -177,6 +180,7 @@ void fillOutIndexEntries(OperationContext* opCtx,
         entries.emplace_back(
             indexEntryFromIndexCatalogEntry(opCtx, collection, *ice, canonicalQuery));
     }
+    pauseAfterFillingOutIndexEntries.pauseWhileSet();
 }
 
 void fillOutPlannerCollectionInfo(OperationContext* opCtx,
